# Brick-Breaker

./: CMakeLists.txt  README.md  generate_project.bat
music/: credits.txt
src/: CAudio.cpp  CAudio.h  CBall.cpp  CBall.h  CBalls.cpp  CBalls.h  CBrick.cpp  CBrick.h  CBricks.cpp  CBricks.h  CBullet.cpp  CBullet.h  CBullets.cpp  CBullets.h  CGame.cpp  CGame.h  CHud.cpp  CHud.h  CLevelManager.cpp  CLevelManager.h  CPaddle.cpp  CPaddle.h  CParticle.cpp  CParticle.h  CParticleEmitter.cpp  CParticleEmitter.h  CParticleSystem.cpp  CParticleSystem.h  CPowerup.cpp  CPowerup.h  CPowerups.cpp  CPowerups.h  CResourceManager.cpp  CResourceManager.h  Utils.h  main.cpp
